PR29972, inconsistent format specification in singular form

PR 29972
	* readelf.c (process_dynamic_section): Correct format string.

(cherry picked from commit 02da71ee20ec71f7b3be85cf2266e09c124983bf)